webui/src/page/UpdatePage.module.css
.container {
	text-align: center;
	width: 100%;
}

.invalid {
	background-color: rgba(255, 0, 0, 0.25);
	color: red;
	font-weight: bold;
}
.new {
	width: 100%;
	text-align: left;
	display: flex;
	flex-direction: column;
	align-items: center;
	background-color: rgba(0, 255, 0, 0.15);
}
.description {
	background-color: rgba(0, 0, 0, 0.15);
	width: 30rem;
	padding: 1rem;
}

